@@ -1,3 +1,7 @@
+2010-05-30 MA Yue<velly.empire@gmail.com>
+
+    *Add the Screensaver Panel
+
 2010-05-30 Homer Xing <homer.xing@gmail.com>
 
     * Add a preference menuitem to choose default pane.
